# productivityProtector

./: CMakeLists.txt  README.MD  main.cpp  window.cpp  window.h
resources/: proresource.rc
